--- a/JoinMeAndroid/app/src/main/res/values/strings.xml
+++ b/JoinMeAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">JoinMe</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">JoinMe</string>
 </resources>
