--- a/JoinMeAndroid/app/src/main/res/values/strings.xml
+++ b/JoinMeAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">JoinMe</string>
     <string name="title_activity_maps">JoinMe</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
